--- a/app/views/facilities_management/long_list/_lot1a.html.erb
+++ b/app/views/facilities_management/long_list/_lot1a.html.erb
@@ -1,5 +1,5 @@
 <div id="fm-lot-1a-list" class="govuk-grid-column-one-third">
-  <span class="govuk-heading-m">Up to £7m</span>
+  <span class="govuk-heading-m">Total contract value up to £7m</span>
   <table class="govuk-table">
     <thead class="govuk-table__head">
     <tr class="govuk-table__row">
