--- a/app/views/facilities_management/long_list/_lot1b.html.erb
+++ b/app/views/facilities_management/long_list/_lot1b.html.erb
@@ -1,5 +1,5 @@
 <div id="fm-lot-1b-list" class="govuk-grid-column-one-third">
-  <span class="govuk-heading-m">£7m to 50m</span>
+  <span class="govuk-heading-m">Total contract value between £7m to 50m</span>
   <table class="govuk-table">
     <thead class="govuk-table__head">
     <tr class="govuk-table__row">
