--- a/app/views/facilities_management/long_list/_filters.html.erb
+++ b/app/views/facilities_management/long_list/_filters.html.erb
@@ -15,6 +15,12 @@
     <div class="govuk-grid-row CCS-fm-supplier-filter-container-grey">
       <div id="fm-region-check-boxes" class="govuk-checkboxes"></div>
     </div>
+
+    <%= @posted_locations.first %>
+    <% @posted_locations.each do |x| %>
+    <%= x %>
+    <% end %>
+
   </div>
   <div class="govuk-grid-row CCS-fm-supplier-filter-container-grey">
     <div class="govuk-grid-row CCS-fm-supplier-filter-container-grey">
@@ -28,4 +34,9 @@
       <div id="fm-service-check-boxes" class="govuk-checkboxes"></div>
     </div>
   </div>
+
+  <% @posted_services.each do |x| %>
+  <%= x %>
+  <% end %>
+
 </div>
