--- a/app/views/facilities_management/long_list/_lot1c.html.erb
+++ b/app/views/facilities_management/long_list/_lot1c.html.erb
@@ -1,5 +1,5 @@
 <div id="fm-lot-1c-list" class="govuk-grid-column-one-third">
-  <span class="govuk-heading-m">Over £50m</span><table class="govuk-table">
+  <span class="govuk-heading-m">Total contract value over £50m</span><table class="govuk-table">
   <thead class="govuk-table__head">
   <tr class="govuk-table__row">
     <th class="govuk-table__header" scope="col">Lot 1c</th>
