--- a/app/views/facilities_management/long_list/long_list.html.erb
+++ b/app/views/facilities_management/long_list/long_list.html.erb
@@ -37,6 +37,9 @@
 
     <a id="suppliers-continue-button" href="/facilities-management/standard-contract/questions" class="govuk-button ccs-no-print" role="button">Continue</a><br>
     <a id="suppliers-summary-button" href="/facilities-management/summary" class="govuk-button ccs-no-print" role="button">XX Summary</a><br>
+    <a id="suppliers-summary-button" href="/facilities-management/summary?lot=1a" class="govuk-button ccs-no-print" role="button">XX Summary Lot 1a</a><br>
+    <a id="suppliers-summary-button" href="/facilities-management/summary?lot=1b" class="govuk-button ccs-no-print" role="button">XX Summary Lot 1b</a><br>
+    <a id="suppliers-summary-button" href="/facilities-management/summary?lot=1c" class="govuk-button ccs-no-print" role="button">XX Summary Lot 1c</a><br>
 
     <p>
       <a id="FM-print-supplier-list" role="button" class="supplier-record__print-option ccs-no-print" href="" >Print this page</a>
