--- a/app/views/facilities_management/summary/index.html.erb
+++ b/app/views/facilities_management/summary/index.html.erb
@@ -1,13 +1,107 @@
 List of Suppliers
 
-<% @idx %>
-<br/>
-<%= @idx2 %>
 
 
-    <!-- Start of main list section -->
-    <div id="CCS-fm-suppliers-long-list" class="govuk-grid-column-two-thirds">
-        <%= render('facilities_management/long_list/lot1a') %>
-        <%= render('facilities_management/long_list/lot1b') %>
-        <%= render('facilities_management/long_list/lot1c') %>
+
+
+
+    <a href="/facilities-management/select-services" class="govuk-back-link ccs-no-print">Back</a>
+
+    <%= render('errors/inline_error_summary') %>
+
+    <div>
+      <fieldset class="govuk-fieldset" aria-describedby="">
+        <strong class="govuk-heading-xl"> Supplier results</strong>
+        <div class="govuk-inset-text ccs-no-print">
+          <strong>On this page</strong><br>
+          <span>Based on your choices, we are showing suppliers in three different groups.</span>
+       </div>
+      </fieldset>
+      <p class="govuk-!-font-size-36">
+        <strong><%= @supplier_count %> suppliers found</strong> based on total contract value, when awarded.
+      </p>
+
+      <!-- Start of filter section -->
+      <div class="govuk-grid-row">
+
+<!--
+        <a id="filter-toggle-btn" id="filter-toggle-btn" href="" class="govuk-button ccs-no-print" role="button">Hide filters</a><br>
+        <div id="fm-filter-pane" class="govuk-grid-column-one-third">
+          <%= render('facilities_management/long_list/filters') %>
+        </div>
+-->
+
+        <!-- Start of main list section -->
+        <div id="CCS-fm-suppliers-long-list" class="govuk-grid-column-two-thirds">
+            <% if (@suppliers_lot1a) %>
+            <%= render('facilities_management/long_list/lot1a') %>
+            <% end %>
+            <% if (@suppliers_lot1b) %>
+            <%= render('facilities_management/long_list/lot1b') %>
+            <% end %>
+            <% if (@suppliers_lot1c) %>
+            <%= render('facilities_management/long_list/lot1c') %>
+            <% end %>
+        </div>
+
+
+
+
+      </div>
+      <div class="govuk-grid-row ccs-no-print">
+        <div class="govuk-inset-text">
+          <strong>Next steps</strong><br>
+          <span>We will now ask you questions about your procurement, buildings and costs.</span><br>
+          <span>You can open a competition for suppliers after you have received an assessed value from us.</span>
+        </div>
+
+        <a id="suppliers-continue-button" href="/facilities-management/standard-contract/questions" class="govuk-button ccs-no-print" role="button">Continue</a><br>
+        <a id="suppliers-summary-button" href="/facilities-management/summary" class="govuk-button ccs-no-print" role="button">XX Summary</a><br>
+        <a id="suppliers-summary-button" href="/facilities-management/summary?lot=1a" class="govuk-button ccs-no-print" role="button">XX Summary Lot 1a</a><br>
+        <a id="suppliers-summary-button" href="/facilities-management/summary?lot=1b" class="govuk-button ccs-no-print" role="button">XX Summary Lot 1b</a><br>
+        <a id="suppliers-summary-button" href="/facilities-management/summary?lot=1c" class="govuk-button ccs-no-print" role="button">XX Summary Lot 1c</a><br>
+
+        <p>
+          <a id="FM-print-supplier-list" role="button" class="supplier-record__print-option ccs-no-print" href="" >Print this page</a>
+        </p>
+      </div>
     </div>
+
+<!------->
+
+<% @regions.each do |key, value| %>
+<div class="govuk-accordion__section ">
+  <div class="govuk-accordion__section-header">
+    <h2 class="govuk-accordion__section-heading">
+      <span class="govuk-accordion__section-button" id="region-<%= key %>"><%= value %></span>
+    </h2>
+  </div>
+  <div id="<% key %>-content" class="govuk-accordion__section-content" aria-labelledby="<%= value %>">
+
+    <% @subregions.each do |key2, value2| %>
+
+      <% if key2.start_with?(key) %>
+        <div class="govuk-form-group">
+          <fieldset class="govuk-fieldset" aria-describedby="<%= value2 %>">
+            <div id="location-checkboxes" class="govuk-checkboxes">
+              <div class="govuk-checkboxes__item">
+                <input class="govuk-checkboxes__input" id="<%= key2 %>" name="<%= key2 %>" locationid="<%= value2 %>" type="checkbox" value="<%= key2 %>">
+                <label id="<%= key2 %>_label" class="govuk-label govuk-checkboxes__label" for="<%= key2 %>">
+                  <%= value2 %>
+                </label>
+              </div>
+            </div>
+          </fieldset>
+        </div>
+      <% end %>
+    <% end %>
+  </div>
+</div>
+<% end %>
+<!------->
+
+    <a id="filter-toggle-btn" id="filter-toggle-btn" href="" class="govuk-button ccs-no-print" role="button">Hide filters</a><br>
+    <div id="fm-filter-pane" class="govuk-grid-column-one-third">
+        <%= render('facilities_management/long_list/filters') %>
+    </div>
+
