--- a/app/views/supply_teachers/admin/uploads/index.html.erb
+++ b/app/views/supply_teachers/admin/uploads/index.html.erb
@@ -2,28 +2,11 @@
   <div class="govuk-grid-column-two-thirds">
     <h1 class="govuk-heading-xl govuk-!-margin-bottom-3 cmp-page-heading">Uploads</h1>
 
-    <%= link_to 'New upload', new_supply_teachers_admin_upload_path %>
-    <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
+    <%= link_to 'New upload', new_supply_teachers_admin_upload_path, class: 'govuk-button'  %>
+    <hr class="govuk-section-break govuk-section-break--xl">
     <% @uploads.each do |upload| %>
-      <div class="govuk-grid-row">
-        <div class="govuk-grid-column-full">
-          <%= link_to upload.current_accredited_suppliers.file.try(:filename), upload.current_accredited_suppliers_url %>
-          <br>
-          <%= link_to upload.geographical_data_all_suppliers.file.try(:filename), upload.geographical_data_all_suppliers_url %>
-          <br>
-          <%= link_to upload.lot_1_and_lot_2_comparisons.file.try(:filename), upload.lot_1_and_lot_2_comparisons_url %>
-          <br>
-          <%= link_to upload.master_vendor_contacts.file.try(:filename), upload.master_vendor_contacts_url %>
-          <br>
-          <%= link_to upload.neutral_vendor_contacts.file.try(:filename), upload.neutral_vendor_contacts_url %>
-          <br>
-          <%= link_to upload.pricing_for_tool.file.try(:filename), upload.pricing_for_tool_url %>
-          <br>
-          <%= link_to upload.supplier_lookup.file.try(:filename), upload.supplier_lookup_url %>
-        </div>
-      </div>
-      <%= link_to "Review", upload, class: 'govuk-button' if upload.review? %>
-      <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
+      <%= render 'upload', upload: upload %>
+      <hr class="govuk-section-break govuk-section-break--xl">
     <% end %>
   </div>
 </div>
