--- a/app/views/supply_teachers/admin/uploads/new.html.erb
+++ b/app/views/supply_teachers/admin/uploads/new.html.erb
@@ -1,46 +1,71 @@
-<%= form_for @upload, html: { multipart: true } do |f| %>
-  <p><%= @upload.errors.full_messages.to_sentence %></p>
-  <div>
-    <label>Current Accredited Suppliers</label>
-    <p><%= link_to f.object.current_accredited_suppliers.file.filename, f.object.current_accredited_suppliers_url if f.object.current_accredited_suppliers.file %></p>
-    <%= f.file_field :current_accredited_suppliers %>
-    <%= f.hidden_field :current_accredited_suppliers_cache %>
+<div class="govuk-grid-row">
+  <div class="govuk-grid-column-two-thirds">
+    <h1 class="govuk-heading-xl govuk-!-margin-bottom-3 cmp-page-heading">New Upload Session</h1>
+    <%= form_for @upload, html: { multipart: true } do |f| %>
+      <p><%= @upload.errors.full_messages.to_sentence %></p>
+      <div class="govuk-form-group">
+        <%= f.label :current_accredited_suppliers, class: "govuk-label" %>
+        <%= f.file_field :current_accredited_suppliers, class: "govuk-file-upload" %>
+        <%= f.hidden_field :current_accredited_suppliers_cache %>
+        <% if @previous_uploaded_files.current_accredited_suppliers.present? %>
+          <p><b>Current file:</b> <%= link_to @previous_uploaded_files.current_accredited_suppliers.file.filename, @previous_uploaded_files.current_accredited_suppliers.file.path %></p>
+        <% end %>
+      </div>
+      <div class="govuk-form-group">
+        <%= f.label :geographical_data_all_suppliers, class: "govuk-label" %>
+        <%= link_to f.object.geographical_data_all_suppliers.file.filename, f.object.geographical_data_all_suppliers_url if f.object.geographical_data_all_suppliers.file %>
+        <%= f.file_field :geographical_data_all_suppliers, class: "govuk-file-upload" %>
+        <%= f.hidden_field :geographical_data_all_suppliers_cache %>
+        <% if @previous_uploaded_files.geographical_data_all_suppliers.present? %>
+          <p><b>Current file:</b> <%= link_to @previous_uploaded_files.geographical_data_all_suppliers.file.filename, @previous_uploaded_files.geographical_data_all_suppliers.file.path %></p>
+        <% end %>
+      </div>
+      <div class="govuk-form-group">
+        <%= f.label :lot_1_and_lot_2_comparisons, class: "govuk-label" %>
+        <%= link_to f.object.lot_1_and_lot_2_comparisons.file.filename, f.object.lot_1_and_lot_2_comparisons_url if f.object.lot_1_and_lot_2_comparisons.file %>
+        <%= f.file_field :lot_1_and_lot_2_comparisons, class: "govuk-file-upload" %>
+        <%= f.hidden_field :lot_1_and_lot_2_comparisons_cache %>
+        <% if @previous_uploaded_files.lot_1_and_lot_2_comparisons.present? %>
+          <p><b>Current file:</b> <%= link_to @previous_uploaded_files.lot_1_and_lot_2_comparisons.file.filename, @previous_uploaded_files.lot_1_and_lot_2_comparisons.file.path %></p>
+        <% end %>
+      </div>
+      <div class="govuk-form-group">
+        <%= f.label :master_vendor_contacts, class: "govuk-label" %>
+        <%= link_to f.object.master_vendor_contacts.file.filename, f.object.master_vendor_contacts_url if f.object.master_vendor_contacts.file %>
+        <%= f.file_field :master_vendor_contacts, class: "govuk-file-upload" %>
+        <%= f.hidden_field :master_vendor_contacts_cache %>
+        <% if @previous_uploaded_files.master_vendor_contacts.present? %>
+          <p><b>Current file:</b> <%= link_to @previous_uploaded_files.master_vendor_contacts.file.filename, @previous_uploaded_files.master_vendor_contacts.file.path %></p>
+        <% end %>
+      </div>
+      <div class="govuk-form-group">
+        <%= f.label :neutral_vendor_contacts, class: "govuk-label" %>
+        <%= link_to f.object.neutral_vendor_contacts.file.filename, f.object.neutral_vendor_contacts_url if f.object.neutral_vendor_contacts.file %>
+        <%= f.file_field :neutral_vendor_contacts, class: "govuk-file-upload" %>
+        <%= f.hidden_field :neutral_vendor_contacts_cache %>
+        <% if @previous_uploaded_files.neutral_vendor_contacts.present? %>
+          <p><b>Current file:</b> <%= link_to @previous_uploaded_files.neutral_vendor_contacts.file.filename, @previous_uploaded_files.neutral_vendor_contacts.file.path %></p>
+        <% end %>
+      </div>
+      <div class="govuk-form-group">
+        <%= f.label :pricing_for_tool, class: "govuk-label" %>
+        <%= link_to f.object.pricing_for_tool.file.filename, f.object.pricing_for_tool_url if f.object.pricing_for_tool.file %>
+        <%= f.file_field :pricing_for_tool, class: "govuk-file-upload" %>
+        <%= f.hidden_field :pricing_for_tool_cache %>
+        <% if @previous_uploaded_files.pricing_for_tool.present? %>
+          <p><b>Current file:</b> <%= link_to @previous_uploaded_files.pricing_for_tool.file.filename, @previous_uploaded_files.pricing_for_tool.file.path %></p>
+        <% end %>
+      </div>
+      <div class="govuk-form-group">
+        <%= f.label :supplier_lookup, class: "govuk-label" %>
+        <%= link_to f.object.supplier_lookup.file.filename, f.object.supplier_lookup_url if f.object.supplier_lookup.file %>
+        <%= f.file_field :supplier_lookup, class: "govuk-file-upload" %>
+        <%= f.hidden_field :supplier_lookup_cache %>
+        <% if @previous_uploaded_files.supplier_lookup.present? %>
+          <p><b>Current file:</b> <%= link_to @previous_uploaded_files.supplier_lookup.file.filename, @previous_uploaded_files.supplier_lookup.file.path %></p>
+        <% end %>
+      </div>
+      <%= f.submit class: 'govuk-button' %>
+    <% end %>
   </div>
-  <div>
-    <label>Geographical Data All Suppliers</label>
-    <p><%= link_to f.object.geographical_data_all_suppliers.file.filename, f.object.geographical_data_all_suppliers_url if f.object.geographical_data_all_suppliers.file %></p>
-    <%= f.file_field :geographical_data_all_suppliers %>
-    <%= f.hidden_field :geographical_data_all_suppliers_cache %>
-  </div>
-  <div>
-    <label>Lot 1 and Lot 2 comparisons</label>
-    <p><%= link_to f.object.lot_1_and_lot_2_comparisons.file.filename, f.object.lot_1_and_lot_2_comparisons_url if f.object.lot_1_and_lot_2_comparisons.file %></p>
-    <%= f.file_field :lot_1_and_lot_2_comparisons %>
-    <%= f.hidden_field :lot_1_and_lot_2_comparisons_cache %>
-  </div>
-  <div>
-    <label>Master Vendor Contacts</label>
-    <p><%= link_to f.object.master_vendor_contacts.file.filename, f.object.master_vendor_contacts_url if f.object.master_vendor_contacts.file %></p>
-    <%= f.file_field :master_vendor_contacts %>
-    <%= f.hidden_field :master_vendor_contacts_cache %>
-  </div>
-  <div>
-    <label>Neutral Vendor Contacts</label>
-    <p><%= link_to f.object.neutral_vendor_contacts.file.filename, f.object.neutral_vendor_contacts_url if f.object.neutral_vendor_contacts.file %></p>
-    <%= f.file_field :neutral_vendor_contacts %>
-    <%= f.hidden_field :neutral_vendor_contacts_cache %>
-  </div>
-  <div>
-    <label>Pricing for tool</label>
-    <p><%= link_to f.object.pricing_for_tool.file.filename, f.object.pricing_for_tool_url if f.object.pricing_for_tool.file %></p>
-    <%= f.file_field :pricing_for_tool %>
-    <%= f.hidden_field :pricing_for_tool_cache %>
-  </div>
-  <div>
-    <label>Supplier lookup</label>
-    <p><%= link_to f.object.supplier_lookup.file.filename, f.object.supplier_lookup_url if f.object.supplier_lookup.file %></p>
-    <%= f.file_field :supplier_lookup %>
-    <%= f.hidden_field :supplier_lookup_cache %>
-  </div>
-  <%= f.submit %>
-<% end %>
+</div>
