--- a/app/views/apprenticeships/home/find_apprentices4.html.erb
+++ b/app/views/apprenticeships/home/find_apprentices4.html.erb
@@ -60,7 +60,7 @@
                 </legend>
 
                 <div class="govuk-checkboxes ccs-govuk-checkboxes--s">
-                  <% browse_routes.each do |rating| %>
+                  <#% browse_routes.each do |rating| %>
                   <div class="govuk-checkboxes__item">
                     <%= check_box_tag(
                               "rating[]",
