CP css updated for new pg

--- a/app/views/ccs_patterns/home/titles_checkboxes.html.erb
+++ b/app/views/ccs_patterns/home/titles_checkboxes.html.erb
@@ -26,11 +26,11 @@
     <section class="govuk-grid-column-two-thirds">
       <form action="" method="">
 
-        <div class="govuk-form-group ccs-titles-checboxes">
+        <div class="govuk-form-group ccs-titles-checkboxes">
           <fieldset class="govuk-fieldset">
 
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
-              <h1 class="govuk-fieldset__heading">
+              <h1 class="govuk-fieldset__heading govuk-!-font-weight-regular">
                 Select all the buildings required in your contract.
               </h1>
             </legend>
@@ -47,7 +47,7 @@
                   1 Wilbraham Place, Kensington and Chelsea, London, SW1X 9AE
                 </span>
 
-                <details class="govuk-details">
+                <details class="govuk-details govuk-details--border-bottom">
                   <summary class="govuk-details__summary">
                     <span class="govuk-details__summary-text">
                       Building details
@@ -69,7 +69,7 @@
                   9 Capital building address, Hampshire, SO40 6FS
                 </span>
 
-                <details class="govuk-details">
+                <details class="govuk-details govuk-details--border-bottom">
                   <summary class="govuk-details__summary">
                     <span class="govuk-details__summary-text">
                       Building details
