--- a/app/assets/stylesheets/components/ccs-global/_ccs-global.scss
+++ b/app/assets/stylesheets/components/ccs-global/_ccs-global.scss
@@ -481,23 +481,29 @@ body.js-enabled #ccs-dynamic-accordian {
 /* small checkboxes ends */
 
 /* titles checkboxes starts */
-.ccs-titles-checboxes {
+.ccs-titles-checkboxes {//append onto div.govuk-form-group
     margin-bottom: govuk-spacing(8);
 
     .govuk-fieldset__heading {//color: lighten( govuk-colour("black"), 10% );
         margin-bottom: govuk-spacing(5);
-        font-weight: normal;
     }
-    .govuk-checkboxes__item {
-        .govuk-checkboxes__hint {
+    .govuk-radios,
+    .govuk-checkboxes {
+        .govuk-label {
+            font-weight: bold;
+        }
+        .govuk-hint {
             margin-bottom: govuk-spacing(1) !important;
         }
         .govuk-details {
             margin-left: govuk-spacing(3);//margin not padding for border
             margin-right: govuk-spacing(3);
-            border-bottom: 1px solid govuk-colour("grey-2");
             margin-bottom: govuk-spacing(1);
             padding-bottom: govuk-spacing(1);
+
+            &.govuk-details--border-bottom {
+                border-bottom: 1px solid govuk-colour("grey-2");
+            }
         }
     }
 }
