--- a/app/views/legal_services/suppliers/index.html.erb
+++ b/app/views/legal_services/suppliers/index.html.erb
@@ -6,7 +6,7 @@
 
       <h1 class="govuk-heading-xl govuk-!-margin-bottom-4 govuk-!-margin-top-0"><%= t('.heading') %></h1>
 
-      <p class="govuk-body govuk-!-margin-bottom-7"><%= t('.results_html', results: @suppliers.count) %></p>
+      <p class="govuk-body govuk-!-margin-bottom-7"><%= t('.results_html', results: @suppliers_count) %></p>
 
 
       <%= link_to 'Download the supplier list', legal_services_suppliers_download_shortlist_path, role: 'button', class: 'govuk-button govuk-!-margin-bottom-6' %>
@@ -14,6 +14,7 @@
       <% @suppliers.each do |supplier| %>
         <%= render 'supplier', supplier: supplier%>
       <% end %>
+      <%= paginate @suppliers, views_prefix: 'shared', window: 2, outer_window: 1 %>
     </div>
   </div>
 </div>
