remove en.yml warnings from i18n rake tasks

--- a/app/views/apprenticeships/journey/find_apprentices.html.erb
+++ b/app/views/apprenticeships/journey/find_apprentices.html.erb
@@ -7,7 +7,7 @@
     <%= govuk_fieldset_with_optional_error(@journey, :training_course) do %>
       <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
         <h1 class="govuk-fieldset__heading">
-          <%= t('Do you know which apprenticeship training course you need training for ?') %>
+          <%= t('.find_1_legend') %>
         </h1>
       </legend>
       <%= display_error(@journey, :training_course) %>
