--- a/app/views/apprenticeships/journey/find_apprentices2.html.erb
+++ b/app/views/apprenticeships/journey/find_apprentices2.html.erb
@@ -7,7 +7,7 @@
     <%= govuk_fieldset_with_optional_error(@journey, :das) do %>
       <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
         <h1 class="govuk-fieldset__heading">
-                <%= t('Does your organisation have a digital apprenticeship service(DAS) account') %>
+                <%= t('.find_2_legend') %>
         </h1>
       </legend>
       <%= display_error(@journey, :das) %>
